將上傳頁面選擇保留全文改成原文

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             <label>
               <span>保留語言</span>
               <select name="keep_lang">
-                <option value="all" selected>全部</option>
+                <option value="all" selected>原文</option>
                 <option value="zh">中文</option>
                 <option value="en">英文</option>
               </select>
