--- a/templates/editor.html
+++ b/templates/editor.html
@@ -42,10 +42,11 @@
       <aside class="panel">
         <section>
           <h2>頁面</h2>
-          <div class="input-row">
+          <div class="input-row page-row">
             <button id="prevPage" class="ghost" type="button">上一頁</button>
-            <button id="nextPage" class="ghost" type="button">下一頁</button>
             <select id="pageSelect"></select>
+            <button id="nextPage" class="ghost" type="button">下一頁</button>
+            <!-- <select id="pageSelect"></select> -->
           </div>
           <label>
             <span>縮放 (%)</span>
