Batch模型改名為翻譯模型，啟用Batch翻譯改為啟用翻譯

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-grid">
             <label>
-              <span>啟用 Batch 翻譯</span>
+              <span>啟用翻譯</span>
               <input type="checkbox" name="translate" />
             </label>
             <label>
@@ -51,7 +51,7 @@
               </select>
             </label>
             <label>
-              <span>Batch 模型</span>
+              <span>翻譯模型</span>
               <select name="model">
                 <option value="gpt-4o-mini-global-batch" selected>gpt-4o-mini-global-batch</option>
               </select>
