任務名稱自動用檔名_jobid，不需要再輸入

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,7 @@
             <input type="file" name="pdf" accept="application/pdf" required />
           </label>
           <div class="form-grid">
-            <label>
-              <span>任務名稱</span>
-              <input type="text" name="job_name" placeholder="輸入任務名稱" />
-            </label>
-            <label>
+<label>
               <span>開始頁面</span>
               <input type="number" name="start" value="1" min="1" />
             </label>
@@ -37,7 +33,7 @@
           <div class="form-grid">
             <label>
               <span>啟用翻譯</span>
-              <input type="checkbox" name="translate" />
+              <input type="checkbox" name="translate" checked/>
             </label>
             <label>
               <span>保留語言</span>
