加入文件批次翻譯功能，並修改預設文字顏色

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -68,7 +68,7 @@
           </label>
           <label>
             <span>字體顏色</span>
-            <input id="fontColor" type="color" value="#1c3c5a" />
+            <input id="fontColor" type="color" value="#0000ff" />
           </label>
           <div class="button-row">
             <button id="addBox" class="ghost">新增文字框</button>
