輸入批次資料夾移除，選取快捷鍵改為ctrl

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -85,7 +85,7 @@
           <h2>快捷鍵</h2>
           <p class="hint">
             拖曳文字框移動，拖曳右下角調整大小。<br />
-            Shift + 點選可多選，框選可快速選取。<br />
+            Ctrl + 點選可多選，框選可快速選取。<br />
             按 Delete 刪除選取的文字框。
           </p>
         </section>
