--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,6 @@
           </label>
           <div class="form-grid">
             <label>
-              <span>批次資料夾（伺服器路徑）</span>
-              <input type="text" name="folder_path" placeholder="例如 C:\\data\\pdfs" />
-            </label>
-            <label>
               <span>開始頁</span>
               <input type="number" name="start" value="1" min="1" />
             </label>
@@ -38,9 +34,9 @@
               <input type="checkbox" name="translate" checked />
             </label>
             <label>
-              <span>保留語言</span>
+              <span>翻譯目標</span>
               <select name="keep_lang">
-                <option value="all" selected>全部</option>
+                <option value="all" selected>原文</option>
                 <option value="zh">中文</option>
                 <option value="en">英文</option>
               </select>
