解決輸出pdf文字大小不同問題

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -86,6 +86,7 @@
           <p class="hint">
             拖曳文字框移動，拖曳右下角調整大小。<br />
             Ctrl + 點選可多選，框選可快速選取。<br />
+            多選後可同步調整文字框大小。<br />
             按 Delete 刪除選取的文字框。
           </p>
         </section>
