全選和取消全選改為全部勾選和取消勾選

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,8 @@
             <h2>任務列表</h2>
           </div>
           <div class="jobs-actions">
-            <button id="jobsSelectAll" class="ghost" type="button">全選</button>
-            <button id="jobsSelectNone" class="ghost" type="button">取消全選</button>
+            <button id="jobsSelectAll" class="ghost" type="button">全部勾選</button>
+            <button id="jobsSelectNone" class="ghost" type="button">取消勾選</button>
             <button id="jobsDownload" class="ghost" type="button">下載翻譯文件</button>
             <button id="jobsRefresh" class="ghost" type="button">重新整理</button>
           </div>
