文字框加上8 個縮放點

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -84,7 +84,7 @@
         <section>
           <h2>快捷鍵</h2>
           <p class="hint">
-            拖曳文字框移動，拖曳右下角調整大小。<br />
+            拖曳文字框移動，拖曳八點調整大小。<br />
             Ctrl + 點選可多選，框選可快速選取。<br />
             多選後可同步調整文字框大小。<br />
             按 Delete 刪除選取的文字框。
